# Shallot

./: .gitignore  Cargo.toml  Dockerfile  README.md  event_log.txt  log.txt  payload_validation.rs  request_handler.rs  sortedLogs.txt  statistics.txt
single/: new.html
src/: cache.rs  firewall.rs  lib.rs  logging.rs  main.rs  payload_verification.rs  proxy_listener.rs  request_handler.rs  socket-proxy.py  sorting_logs.rs  statistics.rs
