[package]
name = "shallot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
url = "2"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"]}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["net", "rt"] }
publicsuffix = "1.5.4"
