[package]
name = "shallot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
url = "2"
regex = "1"
httparse = "1.7.0"
# tokio = { version = "1", features = ["net", "rt", "io-util"] }
publicsuffix = "1.5.4"
memcache = "*"